# sonasid2

./: CMakeLists.txt  CMakeLists2.txt  Circles.cpp  Classifier.cpp  Classifier.h  ClassifierSona.cpp  ClassifierSona.h  Density.cpp  Density.h  Dictionary.cpp  Dictionary.h  Image.cpp  Image.h  LearningIm.cpp  LearningIm.h  Makefile  README.md  cmake_install.cmake  commit.sh  main.cpp  push.sh  runFusion  surf.txt  surf_db.txt  test2.kdev4  testRatslam  testRatslam.cpp  testxy.cpp
.kdev4/: test2.kdev4
